# goldlight

./: .gitignore  Cargo.toml  README.md  bdl.yaml  deno.json  electrobun.config.ts  package.json  tsconfig.json
.github/workflows/: ci.yml
benches/: class_vs_data.bench.ts  runtime_paths.bench.ts
docs/: README.md
docs/adr/: 0001-webgpu-only.md  0002-bdl-scene-ir.md  0004-react-jsx-authoring.md  0005-react-scene-object-aliases.md  0006-react-scene-root-bridge.md  0007-post-processing-execution-model.md  0007-react-scene-root-diff-contract.md  0008-react-reconciler-scene-document.md  0009-cubemap-capture-boundary.md  0010-hybrid-deferred-forward-alpha-materials.md  0010-uber-deferred-forward-alpha-materials.md  0011-custom-wgsl-alpha-policy-binding.md  0012-role-oriented-utility-package-layout.md  README.md  proposals.md
docs/issues/: 0001-native-modal-loop-frame-ticks.md
docs/specs/: README.md  architecture.md  coding-style.md  cubemap-capture.md  cubemap-export.md  desktop-shell.md  device-loss-recovery.md  g2l-layout.md  interaction.md  interop-gltf.md  procedural-generation.md  react-authoring.md  renderer-capabilities.md  rendering.md  runtime-residency.md  scene-ir.md  sdf-mesh-extraction.md
engine/desktop/: app.ts  bootstrap.ts  ffi.ts  mod.ts  react_window.ts  runtime.ts  types.ts  window_manager_protocol.ts  window_manager_worker.ts
engine/drawing/: PORTING.md  caps.ts  clip_stack.ts  command_buffer.ts  dawn_backend_context.ts  draw_pass.ts  mod.ts  path_renderer.ts  prepare_resources.ts  recorder.ts  recording.ts  renderer_provider.ts  resource_provider.ts  shared_context.ts  task.ts  text_atlas_manager.ts  types.ts
engine/geometry/: primitives.ts
engine/gpu/: context.ts  mod.ts  residency.ts
engine/importers/: gltf.ts  obj.ts  stl.ts
engine/layout/: compute.ts  mod.ts  tree.ts
engine/math/: mod.ts  quaternion.ts
engine/procedural/: textures.ts  volumes.ts
engine/raytrace/: mod.ts
engine/react/: authoring.ts  jsx-dev-runtime.ts  jsx-runtime.ts  reconciler.ts  reconciler_forward.ts  reconciler_runtime.ts  runtime_deferred.ts  runtime_forward.ts  runtime_renderer.ts  runtime_uber.ts  scene_document.ts
engine/renderer/: environment_exr.ts  environment_prefilter_worker.ts  renderer.ts  scene_evaluation.ts
engine/spatial/: mod.ts  screen_world_ray.ts
engine/text/: ffi.ts  font_manager.ts  shaper.ts  subrun.ts  text_on_path.ts  types.ts
examples/: README.md  tsconfig.json
examples/2d/: README.md  text_shared.ts
old/: .gitignore  README.md  bdl.yaml
old/engine/desktop/native/: Cargo.toml
old/engine/text/native/: Cargo.toml
runtime/: Cargo.toml  README.md  inspector_protocol.json
runtime/js/: abort.js  blob.js  dom_exception.js  fetch.js  goldlight_module.js  hmr.js  timers.js  websocket.js  webtransport.js  worker_console.js
runtime/src/: drawing.rs  drawing_text.rs  fill_patch.rs  lib.rs  path_atlas.rs  render.rs  stroke_patch.rs  svg.rs  text.rs  text_atlas.rs  vello_compute.rs
runtime/src/scene/: aggregator.rs  color.rs  composition.rs  compositor.rs  display.rs  frame.rs  frame_graph.rs  lowering_2d.rs  lowering_3d.rs  mod.rs  model.rs  render.rs  surfaces.rs  types.rs
runtime/src/scene/content_2d/: fill_patch.rs  lowering.rs  mod.rs  path_atlas.rs  stroke_patch.rs  svg.rs  text.rs  text_atlas.rs  text_pipeline.rs  vello_compute.rs
runtime/src/scene/content_3d/: mod.rs
runtime/src/scene/drawing/: fill_patch.rs  mod.rs  path_atlas.rs  stroke_patch.rs  svg.rs  text.rs  text_atlas.rs  text_pipeline.rs  vello_compute.rs
scripts/: build_desktop_host.ts  build_text_host.mjs  build_text_host.ts  compile_entrypoint.ts  compile_manifest.ts  fetch_example_asset.ts  generate_bdl_ts.ts  generate_forward_environment_brdf_lut.ts  inspect_template_bake.ts  install_sdl2_windows.ps1  refresh_golden_snapshots.ts  render_headless_snapshot.ts  run_byow_example.ts  run_byow_native_demo.ts  run_byow_triangle.ts  run_desktop_example.ts  run_drawing_example.ts  run_electrobun.mjs
sdk/: README.md  package.json  tsconfig.json  vite.config.ts
tests/: README.md  context_targets_test.ts  core_mesh_utils_test.ts  cubemap_capture_test.ts  cubemap_export_test.ts  custom_material_alpha_policy_test.ts  desktop_bootstrap_test.ts  device_recovery_test.ts  drawing_graphite_dawn_test.ts  forward_render_test.ts  golden_snapshot_scenes.ts  golden_snapshot_test.ts  headless_snapshot_script_test.ts  headless_snapshot_test.ts  importers_test.ts  loaders_test.ts  material_residency_test.ts  mesh_residency_test.ts  picking_test.ts  png_snapshot_test.ts  primitives_test.ts  procedural_test.ts  raytrace_test.ts  react_authoring_test.ts  react_authoring_test.tsx  react_reconciler_runtime_test.tsx  renderer_test.ts  residency_invalidation_test.ts  scene_evaluation_test.ts  sdf_mesh_extraction_test.ts  texture_residency_test.ts  volume_residency_test.ts
(+367 files in other folders)
