[package]
name = "goldlight-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev-runtime = ["dep:tungstenite"]

[[bin]]
name = "goldlight-runtime-dev"
path = "src/bin/goldlight-runtime-dev.rs"
required-features = ["dev-runtime"]

[[bin]]
name = "goldlight-runtime-prod"
path = "src/bin/goldlight-runtime-prod.rs"

[dependencies]
deno_core = "0.356"
deno_error = "0.7"
winit = "0.30"
wgpu = "25"
pollster = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["http1", "json", "tokio", "ws"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["net", "rt", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
taffy = "0.7"
tungstenite = { version = "0.24", optional = true }
