[package]
name = "goldlight-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev-runtime = []

[[bin]]
name = "goldlight-runtime-dev"
path = "src/bin/goldlight-runtime-dev.rs"
required-features = ["dev-runtime"]

[[bin]]
name = "goldlight-runtime-prod"
path = "src/bin/goldlight-runtime-prod.rs"

[dependencies]
deno_core = "0.356"
deno_error = "0.7"
winit = "0.30"
wgpu = "25"
pollster = "0.4"
anyhow = "1"
async-stream = "0.3"
bytes = "1"
quinn = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
fastwebsockets = { version = "0.10", features = ["upgrade", "with_axum", "unstable-split"] }
futures = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["macros", "net", "rt", "sync", "time"] }
tokio-rustls = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
web-transport-proto = "0.2"
webpki-roots = "0.26"
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.30"
taffy = "0.7"
font-kit = "0.14.3"
harfbuzz-sys = { version = "0.6.1", default-features = false, features = ["bundled"] }
pathfinder_geometry = "0.5"
ttf-parser = "0.25"
usvg = "0.47"
